<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/beranda" />
    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/ic_category"
        android:title="@string/kategori" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorit" />
    <item
        android:id="@+id/ordersFragment"
        android:icon="@drawable/ic_orders"
        android:title="@string/pesanan" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/akun" />
</menu>
